modify shopping cart gui
