# shoppingcartclient/swagger_json/api.yml
@@ -54,6 +54,26 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/Cart'
+  "/shoppingcart":
+    post:
+      tags:
+        - shoppingcart
+      summary:  Create a shopping cart with an item
+      operationId: create
+      consumes:
+        - application/json
+      produces:
+        - application/json
+      parameters:
+        - in: body
+          name: cartdetail
+          schema:
+            $ref: '#/definitions/Cart'
+      responses:
+        '200':
+          description: OK
+          schema:
+            type: boolean
 definitions:
   Product:
     type: object
